--- a/零基础学院/LayoutPractice/index.html
+++ b/零基础学院/LayoutPractice/index.html
@@ -27,7 +27,7 @@
             <div class="wrap">
                 <ul>
                     <li><a href="/">1</a></li>
-                    <li><a href="/">2</a></li>
+                    <li><a href="/" class="selected">2</a></li>
                     <li><a href="/">3</a></li>
                     <li><a href="/">4</a></li>
                 </ul>
@@ -37,7 +37,7 @@
         <section class="main-nav">
             <nav>
                 <ul>
-                    <li><a href="/">HOME</a></li>
+                    <li><a href="/" class="active">HOME</a></li>
                     <li><a href="/">PROFILE</a></li>
                     <li><a href="/">ABOUT</a></li>
                 </ul>
