--- a/零基础学院/SinglePage/index.html
+++ b/零基础学院/SinglePage/index.html
@@ -123,7 +123,7 @@
                                     <img src="images/pic01.png" alt="Pic1">
                                 </div>
                                 <div class="wrap pic2">
-                                    <img src="images/pic02.png" alt="Pic2">
+                                    <img src="images/Pic02.png" alt="Pic2">
                                     <div class="cover_wrap">
                                         <img src="images/Openicon.png" alt="" class="cover">
                                     </div>
